--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       rel="stylesheet"
     />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -67,7 +74,7 @@
       <!-- SECTION DIGNYTY -->
       <section class="dignity">
         <div class="container">
-          <h2 hidden>Dignity</h2>
+          <h2 class="visually-hidden">Dignity</h2>
           <ul class="dignity-list list">
             <li class="dignity-list-item">
               <h3 class="dignity-sub-title">Strategy</h3>
@@ -138,8 +145,10 @@
                 alt="Product Designer`s photo"
                 width="264"
               />
-              <h3 class="team-sub-title">Mark Guerrero</h3>
-              <p class="team-paragraph">Product Designer</p>
+              <div class="team-description">
+                <h3 class="team-sub-title">Mark Guerrero</h3>
+                <p class="team-paragraph">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -147,8 +156,10 @@
                 alt="Frontend Developer`s photo"
                 width="264"
               />
-              <h3 class="team-sub-title">Tom Ford</h3>
-              <p class="team-paragraph">Frontend Developer</p>
+              <div class="team-description">
+                <h3 class="team-sub-title">Tom Ford</h3>
+                <p class="team-paragraph">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -156,8 +167,10 @@
                 alt="Marketing`s photo"
                 width="264"
               />
-              <h3 class="team-sub-title">Camila Garcia</h3>
-              <p class="team-paragraph">Marketing</p>
+              <div class="team-description">
+                <h3 class="team-sub-title">Camila Garcia</h3>
+                <p class="team-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -165,8 +178,10 @@
                 alt="UI Designer`s photo"
                 width="264"
               />
-              <h3 class="team-sub-title">Daniel Wilson</h3>
-              <p class="team-paragraph">UI Designer</p>
+              <div class="team-description">
+                <h3 class="team-sub-title">Daniel Wilson</h3>
+                <p class="team-paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -175,13 +190,15 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="footer-logo logo link" href="./index.html"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo logo link" href="./index.html"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <p class="footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
