--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,19 @@
       rel="stylesheet"
     />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo logo link" href="./index.html"
             >Web<span class="logo-color">Studio</span></a
@@ -57,148 +64,151 @@
     <!-- MAIN -->
     <main>
       <!-- SECTION FILTER&RESULT -->
-      <section class="filter">
-        <h1 hidden>Filter</h1>
-        <ul class="filter-list list">
-          <li class="filter-list-item">
-            <button class="filter-button" type="button">All</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-button" type="button">Web Site</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-button" type="button">App</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-button" type="button">Design</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-button" type="button">Marketing</button>
-          </li>
-        </ul>
-
-        <ul class="result-list list">
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/banking-app-interface.jpg"
-                alt="Banking App Interface"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Banking App Interface Concept</h2>
-              <p class="result-paragraph">App</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Cashless Payment</h2>
-              <p class="result-paragraph">Marketing</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Meditation App</h2>
-              <p class="result-paragraph">App</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Taxi Service</h2>
-              <p class="result-paragraph">Marketing</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Screen Illustrations</h2>
-              <p class="result-paragraph">Design</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Online Courses</h2>
-              <p class="result-paragraph">Marketing</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/instargam-stories-concept.jpg"
-                alt="Instargam Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Instagram Stories Concept</h2>
-              <p class="result-paragraph">Design</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#">
-              <img
-                src="./images/organic-food.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Organic Food</h2>
-              <p class="result-paragraph">Web Site</p>
-            </a>
-          </li>
-          <li class="result-list-item">
-            <a class="result-list-link link" href="#"
-              ><img
-                src="./images/fresh-coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="result-sub-title">Fresh Coffee</h2>
-              <p class="result-paragraph">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <section class="filter-and-result">
+        <div class="container">
+          <h1 hidden>Filter</h1>
+          <ul class="filter-list list">
+            <li class="filter-list-item">
+              <button class="filter-button" type="button">All</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-button" type="button">Web Site</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-button" type="button">App</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-button" type="button">Design</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-button" type="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="result-list list">
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/banking-app-interface.jpg"
+                  alt="Banking App Interface"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Banking App Interface Concept</h2>
+                <p class="result-paragraph">App</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Cashless Payment</h2>
+                <p class="result-paragraph">Marketing</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Meditation App</h2>
+                <p class="result-paragraph">App</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Taxi Service</h2>
+                <p class="result-paragraph">Marketing</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Screen Illustrations</h2>
+                <p class="result-paragraph">Design</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Online Courses</h2>
+                <p class="result-paragraph">Marketing</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/instargam-stories-concept.jpg"
+                  alt="Instargam Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Instagram Stories Concept</h2>
+                <p class="result-paragraph">Design</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#">
+                <img
+                  src="./images/organic-food.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Organic Food</h2>
+                <p class="result-paragraph">Web Site</p>
+              </a>
+            </li>
+            <li class="result-list-item">
+              <a class="result-list-link link" href="#"
+                ><img
+                  src="./images/fresh-coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="result-sub-title">Fresh Coffee</h2>
+                <p class="result-paragraph">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="footer-logo logo link" href="./index.html"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo logo link" href="./index.html"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <p class="footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
