--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
       <!-- SECTION FILTER&RESULT -->
       <section class="filter-and-result">
         <div class="container">
-          <h1 hidden>Filter</h1>
+          <h1 class="visually-hidden">Filter</h1>
           <ul class="filter-list list">
             <li class="filter-list-item">
               <button class="filter-button" type="button">All</button>
@@ -84,6 +84,7 @@
               <button class="filter-button" type="button">Marketing</button>
             </li>
           </ul>
+
           <ul class="result-list list">
             <li class="result-list-item">
               <a class="result-list-link link" href="#"
@@ -93,8 +94,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Banking App Interface Concept</h2>
-                <p class="result-paragraph">App</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="result-paragraph">App</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -105,8 +110,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Cashless Payment</h2>
-                <p class="result-paragraph">Marketing</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Cashless Payment</h2>
+                  <p class="result-paragraph">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -117,8 +124,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Meditation App</h2>
-                <p class="result-paragraph">App</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Meditation App</h2>
+                  <p class="result-paragraph">App</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -129,8 +138,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Taxi Service</h2>
-                <p class="result-paragraph">Marketing</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Taxi Service</h2>
+                  <p class="result-paragraph">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -141,8 +152,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Screen Illustrations</h2>
-                <p class="result-paragraph">Design</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Screen Illustrations</h2>
+                  <p class="result-paragraph">Design</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -153,8 +166,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Online Courses</h2>
-                <p class="result-paragraph">Marketing</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Online Courses</h2>
+                  <p class="result-paragraph">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -165,8 +180,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Instagram Stories Concept</h2>
-                <p class="result-paragraph">Design</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Instagram Stories Concept</h2>
+                  <p class="result-paragraph">Design</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -177,8 +194,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Organic Food</h2>
-                <p class="result-paragraph">Web Site</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Organic Food</h2>
+                  <p class="result-paragraph">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="result-list-item">
@@ -189,8 +208,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="result-sub-title">Fresh Coffee</h2>
-                <p class="result-paragraph">Web Site</p>
+                <div class="description-cards">
+                  <h2 class="result-sub-title">Fresh Coffee</h2>
+                  <p class="result-paragraph">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
